Add JDBC connection docs and hybrid search benchmark results
- Document JDBC connection with wallet (TNS_ADMIN parameter in URL)
- Document CRITICAL password escaping issue with ! character
- Add working command to extract password from connstr.txt
- Add hybrid search benchmark results (2025-12-11):
  - fuzzy_name_search: 4.77ms avg, 209.6 ops/sec
  - phonetic_name_search: 10.95ms avg, 91.3 ops/sec
  - hybrid_name_search: 17.16ms avg, 58.3 ops/sec
- Note: business name search fails on special chars (needs fix)
- Add null term handling in FuzzySearchService

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>